# sudo-trade

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: default.toml
data/reference/: sample_RELIANCE.csv
docs/kite/: api-documentation.md
scripts/: backtest_cli.py  groww_cli.py
src/: __main__.py
src/analysis/: __init__.py  base.py  sentiment.py
src/backtesting/: __init__.py  base.py  data_loader.py  engine.py  sample_strategy.py  simulator.py
src/brokers/: __init__.py  base.py  groww.py  instruments.py  kite.py  rate_limiter.py
src/core/: __init__.py  config.py  engine.py  events.py  logger.py  registry.py
src/execution/: __init__.py  base.py
src/interfaces/: __init__.py  base.py
src/llm/: __init__.py  base.py  client.py
src/providers/: __init__.py  base.py
src/strategy/: __init__.py  base.py
tests/: test_backtester.py  test_groww_broker.py
